[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/PregameStart.gd" type="Script" id=1]
[ext_resource path="res://assets/images/AMaze_Background-04.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/RobotoSlab-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/AMaze_LOGO-02.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="PregameStart" type="Node"]

script = ExtResource( 1 )

[node name="BackgroundImage" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1281.0
margin_bottom = 796.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="TransitionTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="TextLabel" type="Label" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -864.0
margin_right = 863.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.34902, 0.156863, 1 )
text = "Μάζεψε τα αντικείμενα με τη σειρά 
που φαίνονται στην οθόνη!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="TimerLabel" type="Label" parent="." index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.0
margin_top = -212.0
margin_right = 207.0
margin_bottom = -79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.34902, 0.156863, 1 )
text = "5"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="ItemContainer" type="HBoxContainer" parent="." index="5"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -519.0
margin_top = -328.0
margin_right = 519.0
margin_bottom = -49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="FirstItem" type="TextureRect" parent="ItemContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 352.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="SecondItem" type="TextureRect" parent="ItemContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 356.0
margin_right = 708.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="ThirdItem" type="TextureRect" parent="ItemContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 712.0
margin_right = 1064.0
margin_bottom = 279.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="OrderContainer" type="HBoxContainer" parent="." index="6"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -519.0
margin_top = -52.0
margin_right = 519.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="FirstTexture" type="TextureRect" parent="OrderContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="FirstLabel" type="Label" parent="OrderContainer/FirstTexture" index="0"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -52.0
margin_right = 346.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.941176, 0.34902, 0.156863, 1 )
text = "1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="SecondTexture" type="TextureRect" parent="OrderContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 4.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="SecondLabel" type="Label" parent="OrderContainer/SecondTexture" index="0"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 340.0
margin_top = -52.0
margin_right = 686.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.34902, 0.156863, 1 )
text = "2"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="ThirdTexture" type="TextureRect" parent="OrderContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 8.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="ThirdLabel" type="Label" parent="OrderContainer/ThirdTexture" index="0"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 700.0
margin_top = -51.0
margin_right = 1046.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.941176, 0.34902, 0.156863, 1 )
text = "3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


